# RT-Wikipedia-Edit-Pipeline

./: .gitignore  CMakeLists.txt
bench/: CMakeLists.txt  bench_spsc.cpp
cmake/: warnings.cmake
include/: event_parser.hpp  spsc_ring_buffer.hpp  wiki_event.hpp
src/: CMakeLists.txt  main.cpp  sse_client.cpp  sse_client.hpp
tests/: CMakeLists.txt  test_ring_buffer.cpp  test_sse_parser.cpp
tools/: CMakeLists.txt
